# pyconf_2022_decorators_generators_workshop

./: .gitignore  README.md  pyproject.toml  slideshow.md  slideshow.pptx
decorators/applications/context_manager/: main.py
decorators/applications/dependancy_injection/: README.md  main.py
decorators/applications/dependancy_injection/utils/: __init__.py
decorators/applications/property_decorator/: main.py
decorators/applications/registering_plugins_using_decorators/: main.py
decorators/applications/wrapped_classes/: main.py
decorators/class_based_decorators/decorators_with_arguments/: main.py
decorators/class_based_decorators/simple_decorators/: main.py
decorators/decorator_chaining/: main.py
decorators/functional_decorators/decorators_with_arguments/: main.py
decorators/functional_decorators/simple_decorators/: main.py
generators/: generators.md  generators_vs_iterators.md
generators/coroutines/: coroutines.md  main.py
generators/generator_advanced_methods/: main.py
generators/generator_comprehensions/: main.py
generators/generators_with_context_manager/: main.py
generators/simple_generators/: main.py
